# trx-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
bench/: query_timings.jsonl  results_rust.json
benches/: trx_realdata.rs
python/: .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml
python/docs/: api.rst  conf.py  index.rst  installation.rst  overview.rst  parity.rst  quickstart.rst  requirements.txt
python/src/: lib.rs
python/tests/: conftest.py  test_concatenate_parity.py  test_converter_parity.py  test_parity.py  test_tinytrack.py
python/trxrs/: __init__.py
python/trxrs/lib_core.dylib.dSYM/Contents/: Info.plist
python/trxrs/lib_core.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_core.dylib.yml
src/: any_trx_file.rs  dtype.rs  error.rs  header.rs  lib.rs  mmap_backing.rs  reference.rs  stream.rs  tractogram.rs  trx_file.rs  typed_view.rs  vertex.rs
src/formats/: mod.rs  tck.rs  trk.rs  tt.rs  vtk.rs
src/formats/tt/: decode.rs  mat.rs  mod.rs
src/io/: archive_edit.rs  directory.rs  filename.rs  mod.rs  zip.rs
src/ops/: connectivity.rs  copy_metadata.rs  merge.rs  mod.rs  streamline_ops.rs  subset.rs
tests/: archive_mutation.rs  cli.rs  converters.rs  round_trip.rs  test_data.rs  tinytrack.rs  trk.rs
tests/fixtures/: tinytrack_small.tt.gz.txt
tests/fixtures/trk/: SOURCE.md
