[package]
name = "trx-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"

[dev-dependencies]
ureq = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trx_realdata"
harness = false
