[package]
name = "trx-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["python"]
resolver = "2"

[dependencies]
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
nifti = { version = "0.17", features = ["nalgebra_affine"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
ureq = "3"
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "trx_realdata"
harness = false
