[package]
name = "trxrs-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1"
half = { version = "2", features = ["bytemuck"] }
ndarray = "0.16"
numpy = "0.23"
pyo3 = { version = "0.23", features = ["abi3-py311", "extension-module"] }
serde_json = "1"
trx-rs = { path = ".." }
